2007-01-30  Akim Demaille  <demaille@gostai.com>

	Don't hard code values, use sizeof
	* src/ughostconnection.cc (UGhostConnection::effectiveSend): here.
	Add "tmp" is about the most useless word to include in an
	identifier.

2007-01-30  Akim Demaille  <demaille@gostai.com>

	check-html
	* Makefile.am (check-html): New.

2007-01-30  Akim Demaille  <demaille@gostai.com>

	Add DEBUG traces in the server start up
	* src/userver.cc: here.

2007-01-30  Akim Demaille  <demaille@gostai.com>

	No static definitions in headers
	* src/userver.hh: Use enums.

2007-01-30  Akim Demaille  <demaille@gostai.com>

	Routine permutation
	* src/userver.cc: here.
	No real change.

2007-01-30  Akim Demaille  <demaille@gostai.com>

	Remove C casts
	* src/userver.cc: Remove some useless C casts.
	Indentation changes.
	Add scopes.
	* src/userver.hh: White space changes.
	* src/userver.hh, src/userver.cc, src/console.cc (initialization):
	Rename as...
	(initialize): this.

2007-01-30  Akim Demaille  <demaille@gostai.com>

	Use libport/unistd.h
	* src/network/bsdnet/network.cc: here.

2007-01-29  SIGOURE Benoit  <tsuna@lrde.epita.fr>

	Fix includes.
	* src/network/bsdnet/network.cc: Include unistd.h to get the
	  definition of close(2).

2007-01-28  Akim Demaille  <akim@lrde.epita.fr>

	One less UString pointer
	* src/userver.hh, src/userver.cc (mainName): Remove the indirection,
	and rename as...
	(mainName_): this, private.
	Adjust uses.
	Put the documentation in the header.

2007-01-28  Akim Demaille  <akim@lrde.epita.fr>

	Simplifications
	* src/network/bsdnet/network.cc (notify): Simplify the for loop,
	which had complications whose purpose I do not understand.
	(selectAndProcess): Reorder the if's, and use else if.
	(trigger): Remove useless this->.

2007-01-27  Jean-Christophe Baillie  <baillie@gostai.com>

	revert email that fails in mailto property. 

2007-01-27  Jean-Christophe Baillie  <baillie@gostai.com>

	fix mailto property. 

2007-01-26  Akim Demaille  <akim@lrde.epita.fr>
